# shugaze

./: README.md
backend/: .gitignore  gpt.py  main.py  model.py  pyproject.toml  scraper.py  train.py  train_2.py
backend/data/: dataset.csv
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/lib/: image.ts  model.ts  request.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts  BigLogo.svelte  Button.svelte  Category.svelte  Chart.svelte  Link.svelte  Search.svelte  ShoeCard.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/analyze/[slug]/: +page.svelte  +page.ts
frontend/src/routes/search/[slug]/: +page.svelte  +page.ts
